# css-server

./: .gitignore  LICENSE  README.md  css_server.db  package-lock.json  package.json  run.bat  run.sh
dev_docs/: DISCLAIMER.md  DISCLAIMER.txt  blueprint.md  blueprint.txt  manifest.md  manifest.txt  sprint-doc.md  sprint-doc.txt  sprint-github-pages-runtime.md  sprint-win11-parity.md
dev_docs/plans/win11-calc/: 00-overview.md  01-task-mode-switcher.md  02-task-scientific.md  03-task-programmer.md  04-task-graphing.md  05-task-date.md  06-task-converters.md  07-task-dropdowns.md  08-task-integration.md
docs/: index.html  main.js  styles.css
docs/notes/: deployment.html  manifest.html  network.html  safety.html
docs/src/: index.html  main.js  styles.css
docs/src/modes/: converters.js  graphing.js  scientific.js
docs/src/styles/: _base.scss  _converters.scss  _date.scss  _mode-switcher.scss  _programmer.scss  _settings.scss
scripts/: dev.mjs  test-disabled.mjs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/modes/: converters.js  date.js  graphing.js  programmer.js  scientific.js
src/styles/: _alu.scss  _animations.scss  _base.scss  _converters.scss  _dropdown-menus.scss  _graphing.scss  _logs.scss  _mode-switcher.scss  _motherboard.scss  _programmer.scss  _request.scss  _scientific.scss  _settings.scss  main.scss
tests/: e2e.test.js
